<resources>
    <string name="app_name">RoseChecker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="default_user_name">User Name</string>
    <string name="user_password">User Password</string>
    <string name="login_string">Login</string>
    <string name="rosechecker">Rose\nChecker</string>
    <string name="date_time">Date</string>
    <string name="event_name">Event Name</string>
    <string name="time">Time</string>
    <string name="location">location</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="color">Color</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="new_course">Course Info</string>
    <string name="starts">Starts</string>
    <string name="ends">Ends</string>
    <string name="courseid">CourseID</string>
    <string name="keycontent">keyContent</string>
    <string name="homework">Homework</string>
    <string name="meeting_info">Meeting info</string>
    <string name="meeting">Meeting</string>
    <string name="meeting_agenda">Meeting agenda</string>
    <string name="members">members</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="which_type_of_event_do_you_want">Which type of event do you want?</string>
    <string name="course_event">Course Event</string>
    <string name="normal_event">Normal Event</string>
    <string name="meeting_event">Meeting Event</string>
    <string name="start_date">start date</string>
    <string name="start_time">start time</string>
    <string name="end_date">end date</string>
    <string name="end_time">end time</string>
</resources>
