<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/download"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/download" />
        <item
                android:id="@+id/delete"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/delete" />
        <item
                android:id="@+id/Color"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/color" />
        <item
                android:id="@+id/Share"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/share" />
        <item
                android:id="@+id/Logout"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/logout" />
    </group>
</menu>
