<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorEditBackground"
>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/meeting_info"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="10dp"
              android:id="@+id/new_meeting"
              android:textSize="30sp"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/meeting"
              android:id="@+id/meeting_title"
              android:textSize="24sp"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_below="@+id/new_meeting"
    />

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/location"
              android:textSize="24sp"
              android:id="@+id/meeting_location"
              android:layout_below="@id/meeting_title"
              android:padding="10dp"
              android:background="@android:color/white"
              android:layout_marginTop="5dp"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/meeting_location"
                  android:id="@+id/start"

                  android:layout_marginTop="5dp"
                  android:background="@android:color/white"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/starts"
                  android:layout_weight="10"
                  android:textSize="20sp"
                  android:padding="10dp"
                  android:id="@+id/meeting_startTime"

        />
        <TextView
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/meetingStartDate"
                android:textSize="20sp"
        />
        <TextView
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/meetingStartTime"
                android:textSize="20sp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@+id/start"
                  android:id="@+id/end"
                  android:layout_marginTop="5dp"
                  android:background="@android:color/white"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/ends"
                  android:layout_weight="10"
                  android:textSize="20sp"
                  android:padding="10dp"

        />
        <TextView
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/meetingEndDate"
                android:textSize="20sp"
        />
        <TextView
                android:layout_weight="10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/meetingEndTime"
                android:textSize="20sp"
        />



    </LinearLayout>

    <EditText android:layout_width="match_parent"
              android:background="@android:color/white"
              android:layout_height="wrap_content"
              android:layout_below="@+id/end"
              android:padding="10dp"
              android:layout_marginTop="5dp"
              android:textSize="24sp"
              android:hint="@string/meeting_agenda"
              android:inputType="textMultiLine"
              android:id="@+id/meeting_agenda"
    />
    <EditText android:layout_width="match_parent"
              android:background="@android:color/white"
              android:layout_height="wrap_content"
              android:layout_below="@+id/meeting_agenda"
              android:padding="10dp"
              android:layout_marginTop="5dp"
              android:textSize="24sp"
              android:hint="@string/members"
              android:inputType="textMultiLine"
              android:id="@+id/meeting_member"
    />

</RelativeLayout>