<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        app:cardCornerRadius="@dimen/fab_margin">
    <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_main"
            tools:context=".MainActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:id="@+id/eventName"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_below="@id/eventName"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:id="@+id/time"
                android:textStyle="bold"

        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_below="@id/time"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:id="@+id/location"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
        />



    </RelativeLayout>


</android.support.v7.widget.CardView>